# STP2X3D

./: CMakeLists.txt  LICENSE.md  README.md  USAGE.md
STP2X3D/: CMakeLists.txt  Component.cpp  Component.h  GDT_Item.cpp  GDT_Item.h  IShape.cpp  IShape.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NumTool.h  OCCLib.h  OCCUtil.cpp  OCCUtil.h  S2X_Option.cpp  S2X_Option.h  STEP_Data.cpp  STEP_Data.h  STEP_Reader.cpp  STEP_Reader.h  STP2X3D.cpp  ShapeType.h  StatsPrinter.h  StopWatch.cpp  StopWatch.h  StrTool.h  Tessellator.cpp  Tessellator.h  X3D_Writer.cpp  X3D_Writer.h  stdafx.cpp  stdafx.h
